@@ -26,6 +26,9 @@ Version 5.1.3 -
     with the new binary respect behavior of 5.1
   - Added code to implement better TransactionScope support.  This code is brand new and will be
     heavily refactored in 5.2. (bug #28709)
+  - Fixed problem where connecting to pre-4.1 servers would result in a crash. This was caused
+    by the Field object referring to metadata columns that are not populated on pre-4.1 servers.
+    (bug #29476)
 
 Version 5.1.2 - 6/12/2007
   - Fixed integration with the Website Administration Tool.  Before this fix, the test link
